Create ListObject to use a list as attribute and apply predicates over its content